scss a main contacto

--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,22 @@ header {
 .DesWeb a:hover, .DescargaCv a:hover {
   transform: scale(1.05); }
 
+.ENVIAR {
+  padding: 50px; }
+  .ENVIAR input {
+    font-family: "Chakra Petch", sans-serif;
+    font-size: 3.5rem;
+    color: #fff;
+    text-decoration: none;
+    box-shadow: 2px 1px 3px #808080;
+    background-color: #112848;
+    padding: 2rem 4rem;
+    border-radius: 1rem;
+    text-shadow: 2px 2px 2px #808080;
+    transition: 2s; }
+  .ENVIAR input:hover {
+    transform: scale(1.05); }
+
 .SobreMi {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
@@ -128,7 +144,7 @@ h2 {
   animation-name: Titulos;
   animation-duration: 2s; }
 
-.Parrafo {
+.Parrafo, .ParrafoContacto {
   grid-area: Parrafo;
   font-family: "Audiowide", cursive;
   font-size: 2rem;
@@ -205,3 +221,77 @@ h2 {
 
 .BoxFilaPortfolio:hover {
   transform: scale(1.01); }
+
+.Formulario {
+  display: flex;
+  flex-direction: none;
+  justify-content: center;
+  align-items: none;
+  padding-top: 15px; }
+
+.FilasContacto {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: none; }
+
+.ParrafoContacto {
+  display: flex;
+  flex-direction: none;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px; }
+
+label {
+  display: block;
+  width: 200px;
+  border: 2px solid silver;
+  padding: 8px 10px;
+  position: relative;
+  box-sizing: border-box;
+  border-radius: 4px;
+  transition: .25s;
+  margin: 5px 20px; }
+
+#LabelComentario {
+  width: 440px; }
+
+label input {
+  display: block;
+  width: 100%;
+  border: none;
+  background: transparent;
+  outline: none;
+  font: 16px/16px;
+  font-family: "Chakra Petch", sans-serif;
+  padding: 0; }
+
+label textarea {
+  display: block;
+  width: 100%;
+  border: none;
+  background: transparent;
+  outline: none;
+  font: 16px/16px;
+  padding: 0; }
+
+label span {
+  color: #808080;
+  font-family: "Chakra Petch", sans-serif;
+  position: absolute;
+  top: 8px;
+  left: 10px;
+  transition: .25s; }
+
+label.focus {
+  border-color: #169fe48e; }
+
+label span.focus {
+  color: #169fe48e; }
+
+label span.top {
+  left: 2px;
+  top: -10px;
+  font-size: 12px;
+  background: #d9d9d9;
+  padding: 0 10px; }
