--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -17,3 +17,19 @@
 .DescargaCv {
     @extend .DesWeb;
 }
+.ENVIAR{
+    padding: 50px;
+    input{
+        @include Fuentes($FuentePrincipal, 3.5rem, #fff);
+        text-decoration: none;
+        @include SombraBox;
+        background-color: $ColorSecundario;
+        padding: 2rem 4rem;
+        border-radius: 1rem;
+        @include SombraTexto;
+        transition: $Time;
+    }
+    input:hover{
+        transform: scale(1.05);
+    }
+}
