--- a/estilos-viejos.css
+++ b/estilos-viejos.css
@@ -389,7 +389,7 @@ footer{
 .RrssFooter{
     width: 100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
 
 }
