--- a/css/style.css
+++ b/css/style.css
@@ -295,3 +295,44 @@ label span.top {
   font-size: 12px;
   background: #d9d9d9;
   padding: 0 10px; }
+
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #ffffff;
+  margin-top: auto; }
+
+.RrssFooter {
+  width: 100%;
+  display: flex;
+  flex-direction: start;
+  justify-content: start;
+  align-items: center;
+  margin-left: 20px; }
+  .RrssFooter a:hover {
+    transform: scale(1.1);
+    transition: 2s; }
+  .RrssFooter a {
+    margin: 5px 20px; }
+    .RrssFooter a svg {
+      color: #112848;
+      height: 3rem; }
+    .RrssFooter a a:hover {
+      transform: scale(1.1);
+      transition: 2s; }
+
+.Copyright {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  align-items: center;
+  margin-right: 10px; }
+  .Copyright svg {
+    color: #112848; }
+  .Copyright p {
+    font-family: "Chakra Petch", sans-serif;
+    font-size: 1rem;
+    color: #112848;
+    text-align: center; }
