--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,3 +12,5 @@
 @import "./layout/mainPortfolio";
 @import "./layout/MainContacto";
 @import "./layout/footer";
+@import "./layout/mediatablet";
+@import "./layout/mediaphone";
