bootstrap a navs de todas las pages

--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,21 @@ header {
     transition: 2s;
     transform: scale(1.1); }
 
+.Menu {
+  display: flex;
+  justify-content: flex-end; }
+
+.btn-menu {
+  color: #fff;
+  font-size: 20px; }
+
+.navbar-collapse ul {
+  display: flex;
+  flex-direction: column; }
+  .navbar-collapse ul li {
+    text-align: right;
+    padding-right: 5px; }
+
 .DesWeb a, .DescargaCv a {
   font-family: "Chakra Petch", sans-serif;
   font-size: 3.5rem;
